footer navigacija ima home, promenjen redosled linkova, slika nanaslovnoj

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
         <li><a href="/illustrations.html">Illustrations</a></li>
         <li><a href="/about.html">About me</a></li>
         <li><a href="/forsale.html">For sale</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-		<li><a href="/blog.html">Blog</a></li>
         <li><a href="/photos.html">Photos</a></li>
+		<li><a href="/blog.html">Blog</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
 	  <div class="clearfix"></div>
 	</nav>
@@ -39,13 +39,15 @@
   
 	  <footer>
 <nav>
+	<hr/>
   <ul>
-        <li><a href="/">Illustrations</a></li>
+	  <li><a href="/">Home</a></li>
+        <li><a href="/illustrations.html">Illustrations</a></li>
         <li><a href="/about.html">About me</a></li>
         <li><a href="/forsale.html">For sale</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-		<li><a href="/blog.html">Blog</a></li>
         <li><a href="/photos.html">Photos</a></li>
+		<li><a href="/blog.html">Blog</a></li>
+        <li><a href="/contact.html">Contact</a></li>
       </ul>
 </nav>
 </footer>
