--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,11 @@
 <title>{{page.title}} - Manja</title>
 <link rel="stylesheet" type="text/css" href="sen.css" />
 <link rel="stylesheet" type="text/css" href="style.css" />
+<script src="scripts/jquery-1.6.1.min.js" type="text/javascript"></script>
 <!--[if lte IE 8]>
-<script src="html5.js" type="text/javascript"></script>
+<script src="scripts/html5.js" type="text/javascript"></script>
 <![endif]-->
+
 </head>
 <body>
 <div id="wrap">
@@ -39,7 +41,7 @@
   
 	  <footer>
 <nav>
-	<hr/>
+	
   <ul>
 	  <li><a href="/">Home</a></li>
         <li><a href="/illustrations.html">Illustrations</a></li>
@@ -51,6 +53,7 @@
       </ul>
 </nav>
 </footer>
+<script src="scripts/footer.js" type="text/javascript"></script>
   </div>
   <!-- /wrap -->
   
