--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{page.title}} - Manja</title>
-<link rel="stylesheet" type="text/css" href="sen.css" />
+<link rel="stylesheet" type="text/css" href="sen.css" /> 
 <link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="jquery.lightbox.min.css" />
 <script src="scripts/jquery-1.6.1.min.js" type="text/javascript"></script>
+<script src="scripts/jquery.lightbox.min.js" type="text/javascript"></script>
 <!--[if lte IE 8]>
 <script src="scripts/html5.js" type="text/javascript"></script>
 <![endif]-->
