colorbox, resized illustrations to fit 800x600, base-url set to /manja

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{page.title}} - Manja</title>
-<link rel="stylesheet" type="text/css" href="sen.css" /> 
-<link rel="stylesheet" type="text/css" href="style.css" />
-<link rel="stylesheet" type="text/css" href="footer.css" />
-<link rel="stylesheet" type="text/css" href="jquery.lightbox.min.css" />
+<link rel="stylesheet" type="text/css" href="styles/sen.css" /> 
+<link rel="stylesheet" type="text/css" href="styles/style.css" />
+<link rel="stylesheet" type="text/css" href="styles/footer.css" />
+<link rel="stylesheet" type="text/css" href="styles/colorbox.css" />
 <script src="scripts/jquery-1.6.1.min.js" type="text/javascript"></script>
-<script src="scripts/jquery.lightbox.min.js" type="text/javascript"></script>
+<script src="scripts/jquery.colorbox-min.js" type="text/javascript"></script>
 <!--[if lte IE 8]>
 <script src="scripts/html5.js" type="text/javascript"></script>
 <![endif]-->
@@ -19,16 +19,16 @@
   
     <header>
       <div id="logo">
-        <h1><a href="/">Manja</a></h1>
+        <h1><a href="index.html">Manja</a></h1>
 	  </div>
 	<nav>
 	  <ul>
-        <li><a href="/illustrations.html">Illustrations</a></li>
-        <li><a href="/about.html">About me</a></li>
-        <li><a href="/forsale.html">For sale</a></li>
-        <li><a href="/photos.html">Photos</a></li>
-		<li><a href="/blog.html">Blog</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="illustrations.html">Illustrations</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="forsale.html">For sale</a></li>
+        <li><a href="photos.html">Photos</a></li>
+		<li><a href="http://njama82.blogspot.com">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 	  <div class="clearfix"></div>
 	</nav>
@@ -46,13 +46,13 @@
 <nav>
 	
   <ul>
-	  <li><a href="/">Home</a></li>
-        <li><a href="/illustrations.html">Illustrations</a></li>
-        <li><a href="/about.html">About me</a></li>
-        <li><a href="/forsale.html">For sale</a></li>
-        <li><a href="/photos.html">Photos</a></li>
-		<li><a href="/blog.html">Blog</a></li>
-        <li><a href="/contact.html">Contact</a></li>
+	  <li><a href="index.html">Home</a></li>
+        <li><a href="illustrations.html">Illustrations</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="forsale.html">For sale</a></li>
+        <li><a href="photos.html">Photos</a></li>
+		<li><a href="blog.html">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <div class="clearfix"></div>
 </nav>
